--- a/src/style/equipe.css
+++ b/src/style/equipe.css
@@ -3,7 +3,11 @@
     text-align: center;
     position: relative;
     z-index: 1;
+    background-image: url('../images/so-white.png');
+    background-repeat: repeat;
+    background-size: auto;
 }
+
 
 #equipe::before {
     content: "";
