--- a/src/style/exames.css
+++ b/src/style/exames.css
@@ -1,7 +1,8 @@
 #exames {
     padding: 60px 8%;
+    background-repeat: repeat;
+    background-size: auto;
     text-align: center;
-    background-color: rgba(255, 255, 255, 0.6);
 }
 
 #exames h2 {
